# portfolios-tracker

./: .gitignore  .gitmessage  .knipignore  .lintstagedrc.json  .replit  .syncpackrc.json  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.MD  commitlint.config.js  docker-compose.yaml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini  replit.md  requirements.txt  sheriff.config.ts  turbo.json  uv-migration-data-pipeline.md
.agent/: ARCHITECTURE.md
.husky/: pre-commit
_bmad-output/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-15.md  prd.md  project-context.md
airflow-docker/: docker-compose.yaml
dags/: clickhouse_stock_etl.py  market_data_evening_batch.py  market_news_morning.py
docs/: PRD.md  (+9 more)
services/data-pipeline/: .coveragerc  .env.example  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  run_tests.sh
services/data-pipeline/config/: airflow.cfg
services/data-pipeline/dags/: assets_dimension_etl.py  market_data_evening_batch.py  market_news_morning.py  sync_assets_to_postgres.py
services/data-pipeline/dags/etl_modules/: notifications.py
services/data-pipeline/scripts/: init_clickhouse.py  init_clickhouse_schema.py  manual_load_data.py
services/data-pipeline/sql/: init_schema.sql  metabase_dashboard_schema.sql
services/data-pipeline/tests/: README.md  __init__.py  conftest.py
services/data-pipeline/tests/fixtures/: sample_data.json
services/data-pipeline/tests/mocks/: api_responses.py
services/data-pipeline/tests/unit/: test_notifications.py
(+619 files in other folders)
