[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-common-sql>=1.30.3",
    "apache-airflow-providers-postgres>=6.5.2",
    "apache-airflow-providers-telegram>=4.9.2",
    "asyncpg>=0.31.0",
    "clickhouse-connect>=0.10.0",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta==0.4.71b0",
    "psycopg2-binary>=2.9.11",
    "pycoingecko>=3.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.27.2",
    "vnstock>=3.4.0",
    "websockets>=15.0.1",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "freezegun==1.2.2",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
    "responses==0.23.3",
]
